
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int WSADATA ;


 int AF_INET ;
 int IPPROTO_TCP ;
 int MAKEWORD (int,int) ;
 int SOCK_STREAM ;
 int WSASocket (int ,int ,int ,int *,int ,int ) ;
 scalar_t__ WSAStartup (int ,int *) ;
 int _perror (char*) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int free (struct sockaddr_in*) ;
 int htons (int) ;
 int inet_addr (char*) ;
 scalar_t__ malloc (int) ;
 int memset (struct sockaddr_in*,int,int) ;
 int socket (int ,int ,int ) ;
 int stderr ;

int Connect(char* IP)
{
    struct sockaddr_in *_addr;
    int vict_sck;
    if(!(_addr=(struct sockaddr_in *)malloc(sizeof(struct sockaddr_in))))
    {
                     fprintf(stderr, "[*]   Unable to reserve memory");
                     exit(-1);
    }

    memset(_addr, 0x0, sizeof(struct sockaddr_in));
    _addr->sin_family = AF_INET;
    _addr->sin_port = htons(80);
    _addr->sin_addr.s_addr = inet_addr(IP);
    if(connect(vict_sck, (struct sockaddr *)_addr, sizeof(struct sockaddr)) < 0)
                 _perror("connect() ");

    free(_addr);
    return vict_sck;
}
