; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/php/dos/extr_1517.c_Connect.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/php/dos/extr_1517.c_Connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_in = type { %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i32 }
%struct.sockaddr = type { i32 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"[*]   Unable to reserve memory\00", align 1
@AF_INET = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [11 x i8] c"connect() \00", align 1
@IPPROTO_TCP = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Connect(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.sockaddr_in*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = call i64 @malloc(i32 12)
  %6 = inttoptr i64 %5 to %struct.sockaddr_in*
  store %struct.sockaddr_in* %6, %struct.sockaddr_in** %3, align 8
  %7 = icmp ne %struct.sockaddr_in* %6, null
  br i1 %7, label %12, label %8

8:                                                ; preds = %1
  %9 = load i32, i32* @stderr, align 4
  %10 = call i32 @fprintf(i32 %9, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %11 = call i32 @exit(i32 -1) #3
  unreachable

12:                                               ; preds = %1
  %13 = load %struct.sockaddr_in*, %struct.sockaddr_in** %3, align 8
  %14 = call i32 @memset(%struct.sockaddr_in* %13, i32 0, i32 12)
  %15 = load i32, i32* @AF_INET, align 4
  %16 = load %struct.sockaddr_in*, %struct.sockaddr_in** %3, align 8
  %17 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %16, i32 0, i32 2
  store i32 %15, i32* %17, align 4
  %18 = call i32 @htons(i32 80)
  %19 = load %struct.sockaddr_in*, %struct.sockaddr_in** %3, align 8
  %20 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 4
  %21 = load i8*, i8** %2, align 8
  %22 = call i32 @inet_addr(i8* %21)
  %23 = load %struct.sockaddr_in*, %struct.sockaddr_in** %3, align 8
  %24 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  store i32 %22, i32* %25, align 4
  %26 = load i32, i32* %4, align 4
  %27 = load %struct.sockaddr_in*, %struct.sockaddr_in** %3, align 8
  %28 = bitcast %struct.sockaddr_in* %27 to %struct.sockaddr*
  %29 = call i64 @connect(i32 %26, %struct.sockaddr* %28, i32 4)
  %30 = icmp slt i64 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %12
  %32 = call i32 @_perror(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  br label %33

33:                                               ; preds = %31, %12
  %34 = load %struct.sockaddr_in*, %struct.sockaddr_in** %3, align 8
  %35 = call i32 @free(%struct.sockaddr_in* %34)
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @memset(%struct.sockaddr_in*, i32, i32) #1

declare dso_local i32 @htons(i32) #1

declare dso_local i32 @inet_addr(i8*) #1

declare dso_local i64 @connect(i32, %struct.sockaddr*, i32) #1

declare dso_local i32 @_perror(i8*) #1

declare dso_local i32 @free(%struct.sockaddr_in*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
